--- a/src/index.html
+++ b/src/index.html
@@ -4,30 +4,29 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
+    <title>Search</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&family=Poppins&family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet" />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <!-- <load ="partials/header.html" /> -->
-
-    <section>
+    <header>
       <form class="search-form" id="search-form">
-        <input type="text" name="searchQuery" autocomplete="off" placeholder="Search images..." id="search-input" />
+        <input type="text" name="query" autocomplete="off" placeholder="Search images..." id="search-input" />
         <button type="submit">Search</button>
       </form>
-      <!-- <div id="loader" class="loader"></div> -->
-      <span id="loader" class="loader">Loading images, please wait...</span>
-      <!-- <div id="loader"></div> -->
-      <!-- <div id="loader">Load&nbsp;ng</div> -->
-    </section>
+    </header>
     <main>
       <div id="image-gallery" class="gallery"></div>
+      <p id="spinner" class="loader spinner is-hidden">
+        Loading images, please wait...
+      </p>
+      <button id="load-more" type="button" class="btn btn-primary button is-hidden" data-action="load-more">
+        Load more
+      </button>
     </main>
-      
-  
-    <!-- Loads the specified .html file
-    <load ="partials/vite-promo.html" /> -->
-
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
